# onyx

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
OnyxApp/: project.yml
OnyxApp/Onyx/: Info.plist
OnyxApp/Onyx.xcodeproj/: project.pbxproj
OnyxApp/Onyx/AIAssistant/: AIAssistantView.swift  AIAssistantViewModel.swift
OnyxApp/Onyx/App/: AppCommands.swift  AppState.swift  ContentView.swift  NewTabView.swift  OnyxApp.swift  ProfileManager.swift
OnyxApp/Onyx/Auth/: AuthManager.swift  LoginView.swift
OnyxApp/Onyx/CRDT/: CRDTDocument.swift
OnyxApp/Onyx/CommandPalette/: CommandPaletteView.swift
OnyxApp/Onyx/Components/: SearchField.swift  ToastView.swift
OnyxApp/Onyx/Database/: AppDatabase.swift  DatabaseObservation.swift
OnyxApp/Onyx/Editor/: CursorOverlay.swift  DocumentStatsBar.swift  EditorToolbar.swift  EditorView.swift  FrontmatterView.swift  MarkdownEditorField.swift  MarkdownHighlighter.swift  MarkdownNSTextView.swift  OnyxTableView.swift  TableParser.swift
OnyxApp/Onyx/Models/: Block.swift  Document.swift  InlineFormat.swift  Presence.swift  Project.swift  TabItem.swift  Team.swift  UserProfile.swift
OnyxApp/Onyx/RAG/: BM25Index.swift  BacklinkEngine.swift  DocumentChunker.swift  (+2 more)
onyx-crdt/: Cargo.toml  build.rs
onyx-crdt/scripts/: build-xcframework.sh
onyx-crdt/src/: awareness.rs  block.rs  document.rs  lib.rs  sync.rs
onyx-crdt/uniffi/: onyx_crdt.udl
onyx-server/: Cargo.toml  Dockerfile  docker-compose.yml
onyx-server/src/: auth.rs  main.rs  persistence.rs  protocol.rs  rooms.rs  ws.rs
(+20 files in other folders)
