[package]
name = "onyx-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "onyx-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
